[package]
name = "tutorial"
version = "0.1.0"
authors = ["Mostafa Rezaei <mostafa.ezaeir@gmail.com>"]
edition = "2021"
description = "Example usage of some aws services"

[dependencies]
aws-config = "0.0.26-alpha"
kms = { package = "aws-sdk-kms", version = "0.0.26-alpha" }
aws-sdk-s3 = "0.0.26-alpha"
aws-hyper = "0.0.26-alpha"
aws-types = "0.0.26-alpha"
tokio = { version = "1", features = ["full"] }
structopt = { version = "0.3", default-features = false }
base64 = "0.13.0"
tracing-subscriber = { version = "0.2.16", features = ["fmt"] }
yaml-rust = "0.4.5"
lazy_static = "1.4.0"
futures = "0.3.18"
fernet = "0.1.4"
tokio-postgres = "0.7.5"
log = "0.4.14"
random = "0.12.2"
fasthash = "0.4.0"
arrayvec = "0.7.2"
tempfile = "3.2.0"
postgres-types = "0.2.2"
filename = "0.1.1"
chrono = "0.4.19"
env_logger = "0.9.0"